# npio

./: .gitignore  CHANGELOG.md  CMakeLists.txt  LICENSE  README.md  makefile  minimal.c  npio_test_suite.py
include/: npio.h
src/: dp.c  dp.h  mex_npio.c  npio.c  npio.h  npio_cli.c  npio_config.h  npio_config.h.in
test/: create_npy_files.py  npio_test_suite.py  order.py
